Overlay and navbar corrections

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,6 +3,8 @@ nav {
     padding: 1rem 0;
     position: fixed;
     width: 100%;
+    background-color: white;
+    z-index: 10;
 }
 
 .navbar-content {
@@ -133,4 +135,5 @@ nav {
 
 .overlay-show {
     display: block;
+    z-index: 90;
 }
