Disable scroll when sidemenu is opened

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
     font-family: 'Blinker', sans-serif;
 }
 
+body {
+    position: relative;
+}
+
 .container {
     max-width: 1200px;
     margin: 0px auto;
