--- a/src/pages/ProductDetails/ProductDetails.css
+++ b/src/pages/ProductDetails/ProductDetails.css
@@ -9,25 +9,41 @@
     margin-bottom: 5rem;
 }
 
+@media(max-width: 1050px) {
+    .product-page .product-page-content .main-part {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+}
+
+@media(max-width: 500px) {
+    .product-page .product-page-content .main-part {
+        margin-bottom: 2rem;
+    }
+}
+
 .product-page .product-page-content .main-part .left-side {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    border: 1px solid black;
 }
 
 .product-page .product-page-content .main-part .left-side .big-picture {
     width: 25rem;
-    border: 1px solid red;
+}
+
+@media(max-width: 500px) {
+    .product-page .product-page-content .main-part .left-side .big-picture {
+        width: fit-content;
+    }
 }
 
 .product-page .product-page-content .main-part .left-side .big-picture img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border: 1px solid black;
 }
 
 .product-page .product-page-content .main-part .left-side .small-pictures {
@@ -37,7 +53,13 @@
 
 .product-page .product-page-content .main-part .left-side .small-pictures .pic {
     width: 10rem;
-    border: 1px solid red;
+    cursor: pointer;
+}
+
+@media(max-width: 600px) {
+    .product-page .product-page-content .main-part .left-side .small-pictures .pic {
+        width: 100%;
+    }
 }
 
 .product-page .product-page-content .main-part .left-side .small-pictures .pic:hover {
@@ -46,7 +68,6 @@
 }
 
 .product-page .product-page-content .main-part .left-side .small-pictures .pic img {
-    border: 1px solid black;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -56,10 +77,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 3rem;
+    gap: 2rem;
     background-color: rgb(209, 209, 209);
     padding: 1rem 2rem;
     height: 30rem;
+}
+
+@media(max-width: 500px) {
+    .product-page .product-page-content .main-part .right-side {
+        height: fit-content;
+    }
 }
 
 .product-page .product-page-content .main-part .right-side h4 {
@@ -70,14 +97,28 @@
 
 .product-page .product-page-content .main-part .right-side>p {
     font-size: 1.1rem;
-    text-wrap: balance;
+    /* text-wrap: balance; */
     line-height: 1.5rem;
+}
+
+@media(max-width: 500px) {
+    .product-page .product-page-content .main-part .right-side>p {
+        text-align: justify;
+        /* text-wrap: nowrap; */
+    }
 }
 
 .product-page .product-page-content .main-part .right-side .qty-price {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+@media(max-width: 500px) {
+    .product-page .product-page-content .main-part .right-side .qty-price {
+        flex-direction: column;
+        gap: 1rem;
+    }
 }
 
 .product-page .product-page-content .main-part .right-side .qty-price p {
@@ -116,6 +157,12 @@
     gap: 1rem;
 }
 
+@media(max-width: 500px) {
+    .product-page .product-page-content .main-part .right-side .buttons {
+        flex-direction: column;
+    }
+}
+
 .product-page .product-page-content .main-part .right-side .buttons .button {
     width: 50%;
     padding: 1rem 1rem;
@@ -141,7 +188,6 @@
 .product-page .product-page-content .main-part .right-side .buttons .button#buy {
     background-color: #b6002c;
     border: 2px solid #b6002c;
-    ;
     color: white;
 }
 
@@ -157,9 +203,21 @@
     margin-bottom: 5rem;
 }
 
+@media(max-width: 500px) {
+    .product-page .product-page-content .lower-part {
+        grid-template-columns: 1fr;
+    }
+}
+
 .product-page .product-page-content .lower-part .col {
     background-color: rgb(209, 209, 209);
     padding: 2rem;
+}
+
+@media(max-width: 500px) {
+    .product-page .product-page-content .lower-part .col {
+        text-align: center;
+    }
 }
 
 .product-page .product-page-content .lower-part .col p:first-child {
