Change color to mobile side menu

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -70,7 +70,7 @@ nav {
 
 /* mobile side menu */
 .mobile-sidemenu {
-    background-color: rgb(182, 179, 179);
+    background-color: rgb(229 228 228);
     position: fixed;
     top: 0;
     right: 0;
