--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,7 +12,8 @@ nav {
     justify-content: space-between;
     align-items: center;
     transition: all 0.2s linear;
-    height: 5rem;   /* added because of smooth transition */
+    height: 5rem;
+    /* added because of smooth transition */
 }
 
 .navbar-content.scroll-active {
@@ -128,6 +129,80 @@ nav {
 
 .mobile-sidemenu #close-btn:hover {
     color: white;
+}
+
+
+/* shopping cart */
+.shopping-cart {
+    background-color: white;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 100;
+    width: 500px;
+    height: 100vh;
+    padding: 2rem 2rem;
+    transition: all 0.3s;
+    transform: translateX(100%);
+}
+
+@media(max-width: 600px) {
+    .shopping-cart {
+        width: 300px;
+    }
+}
+
+.shopping-cart-show {
+    transform: translateX(0);
+}
+
+.shopping-cart .shopping-cart-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.shopping-cart .shopping-cart-header p {
+    font-size: 1.3rem;
+    font-weight: bolder;
+}
+
+@media(max-width: 600px) {
+    .shopping-cart .shopping-cart-header p {
+        font-size: 1.1rem;
+        font-weight: bolder;
+    }
+}
+
+.shopping-cart .shopping-cart-header #shopping-close-btn {
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.shopping-cart .shopping-cart-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+
+@media(max-width: 600px) {
+    .shopping-cart .shopping-cart-content img {
+        width: 50%;
+    }
+}
+
+.shopping-cart .shopping-cart-content p {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.shopping-cart .shopping-cart-content button {
+    padding: 0.5rem;
+    font-size: 1.1rem;
+    cursor: pointer;
 }
 
 /* overlay */
